fix mobile spacing issues

--- a/responsive-web-design/portfolio/portfolio.css
+++ b/responsive-web-design/portfolio/portfolio.css
@@ -136,24 +136,27 @@ figure:hover {
 @media (max-width: 900px)
 {
     .container {
+        margin: 0;
         display: block;
+        overflow-x: hide;
     }
     .sidebar {
         display: block;
-        position: fixed;
-        top: 0;
-        left: 0;
+        position: relative;
         width: 100%;
-        height: 420px;
+        height: 380px;
     }
     .about {
-        padding-top: 350px;
+        margin-top: 0px;
     }
     h1 {
-        margin-top: 30px;
+        margin-top: 0px;
         padding: none;
     }
     .side-text {
         padding-right: 2em;
+    }
+    .tiles {
+        margin-left: 0px;
     }
 }
